# ppl

./: .editorconfig  README.md  pyproject.toml
ppl/: __main__.py  eval.py  parser.py  ui.py
